--- a/style.css
+++ b/style.css
@@ -27,10 +27,12 @@ body {
 }
 
 .page1 {
-  max-height: 100vh;
+  min-height: 100vh;
   width: 100vw;
   padding: 35px 30px;
   background: #efeae3;
+  position: relative;
+  z-index: 1;
 }
 
 .page1-top {
@@ -92,7 +94,7 @@ body {
 }
 
 .page1-center {
-  height: 74vh;
+  min-height: 74vh;
   width: 100%;
   display: flex;
   align-items: flex-end;
@@ -151,16 +153,19 @@ body {
 }
 
 .page2 {
-  max-height: 100vh;
+  min-height: 10vh;
   width: 100vw;
   padding: 20px 30px;
   object-fit: cover;
   overflow: hidden;
   background: #efeae3;
+  position: relative;
+  margin-top: -10vh;
 }
 
 .page2 video {
-  width: calc(100vw - 60px);
+  width: 100%;
+  /* aspect-ratio: 1; */
   object-fit: cover;
   border-radius: 15px;
   position: relative;
@@ -172,7 +177,8 @@ body {
   width: 40vw;
   height: 30vw;
   right: 0;
-  top: 78vh;
+  top: -10vh; 
+  z-index: 11;
 }
 
 #hero-1 {
@@ -234,7 +240,7 @@ body {
 }
 
 .page3 {
-  max-height: 100vh;
+  min-height: 1vh;
   width: 100vw;
   padding: 35px 30px;
   position: relative;
@@ -755,7 +761,7 @@ body {
 
 .footer {
   position: fixed;
-  height: 90vh;
+  min-height: 70vh;
   width: 100vw;
   bottom: 0px;
   left: 0px;
@@ -871,7 +877,7 @@ body {
 }
 
 .page7 {
-    max-height: 50vh;
+    min-height: 50vh;
     width: 100%;
     padding: 30px 35px;
     display: flex;
